Example blog with 4 articles

--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -38,9 +38,9 @@ const metadata = {
 <Layout metadata={metadata}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
     <Headline
-      subtitle="A statically generated blog example with news, tutorials, resources and other interesting content related to AstroWind"
+      subtitle="Twój Ekologiczny Dom to blog poświęcony zrównoważonemu sprzątaniu i trosce o środowisko. Odkryj z nami, jak wykorzystać innowacyjne, ekologiczne produkty Raypath International, aby stworzyć zdrowszy dom i lepszą przyszłość dla naszej planety."
     >
-      The Blog
+      Czysty dom, czysta planeta
     </Headline>
     <BlogList posts={page.data} />
     <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
