--- a/src/components/widgets/rocksoft/Calculator.astro
+++ b/src/components/widgets/rocksoft/Calculator.astro
@@ -10,9 +10,9 @@ const {
 ---
 
 
-<section class="flex items-center py-20 bg-rs-light-green">
+<section class="flex items-center py-[100px] bg-rs-light-green dark:bg-rs-dark-blue-2 px-4">
     <div class="max-w-screen-lg mx-auto">
-        <h2 class="font-bold md:text-6xl text-2xl text-black text-center mb-10">Kluczowe zalety korzystania z produktów <span>Raypath</span></h2>
+        <h2 class="font-bold md:text-5xl text-2xl text-black text-center mb-10 dark:text-white">Kalkulator oszczędności</h2>
 
         <Calculator />
 
