--- a/src/components/widgets/rocksoft/Whyus.astro
+++ b/src/components/widgets/rocksoft/Whyus.astro
@@ -1,7 +1,7 @@
-<section class="flex items-center p-5">
+<section class="flex items-center pt-5 pb-24 dark:bg-rs-dark-blue-2 px-4">
     <div class="max-w-screen-lg mx-auto">
-        <h2 class="font-bold md:text-6xl text-2xl text-black text-center">Kluczowe zalety korzystania z produktów <span>Raypath</span></h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-12 md:gap-8 mt-11">
+        <h2 class="font-bold md:text-5xl text-2xl text-black dark:text-white text-center">Kluczowe zalety korzystania z produktów <span class="text-rs-green">Raypath</span></h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-12 md:gap-18 mt-20">
             
             <div>
                 <div class="h-24 flex items-center justify-center">
@@ -10,8 +10,8 @@
                     </svg>
                 </div>
                 
-                <h3 class="font-bold text-base text-black text-center mb-2">Ochrona środowiska naturalnego</h3>
-                <p class="font-regular text-base text-black text-center">Chcąc chronić naszą planetę Raypath stworzyło technologię NanoSilver, która opiera się na wykorzystaniu jedynie wody, dzięki czemu do środowiska trafia mniej zanieczyszczeń chemicznych.</p>
+                <h3 class="font-bold text-base text-black dark:text-white text-center mb-2">Ochrona środowiska naturalnego</h3>
+                <p class="font-regular text-base text-black dark:text-white text-center">Chcąc chronić naszą planetę Raypath stworzyło technologię NanoSilver, która opiera się na wykorzystaniu jedynie wody, dzięki czemu do środowiska trafia mniej zanieczyszczeń chemicznych.</p>
             </div>
 
             <div>
@@ -21,8 +21,8 @@
                     </svg>  
                 </div>
                                   
-                <h3 class="font-bold text-base text-black text-center mb-2">Oszczędność czasu i pieniędzy</h3>
-                <p class="font-regular text-base text-black text-center">Technologia NanoSilver sprawia, że czyszczenie jest o 50 do 70% szybsze i łatwiejsze, niż sprzątanie sposobem tradycyjnym. Dodatkowo jednorazowa inwestycja w czyściki Raypath przekłada się na ich wieloletnią żywotnością.</p>
+                <h3 class="font-bold text-base text-black dark:text-white text-center mb-2">Oszczędność czasu i pieniędzy</h3>
+                <p class="font-regular text-base text-black dark:text-white text-center">Technologia NanoSilver sprawia, że czyszczenie jest o 50 do 70% szybsze i łatwiejsze, niż sprzątanie sposobem tradycyjnym. Dodatkowo jednorazowa inwestycja w czyściki Raypath przekłada się na ich wieloletnią żywotnością.</p>
             </div>
 
             <div>
@@ -32,8 +32,8 @@
                     </svg> 
                 </div>
                               
-                <h3 class="font-bold text-base text-black text-center mb-2">Ochrona zdrowia</h3>
-                <p class="font-regular text-base text-black text-center">Technologia NanoSilver pozwala na wyeliminowanie niebezpiecznych dla zdrowia środków chemicznych stosowanych w gospodarstwach domowych. </p>
+                <h3 class="font-bold text-base text-black dark:text-white text-center mb-2">Ochrona zdrowia</h3>
+                <p class="font-regular text-base text-black dark:text-white text-center">Technologia NanoSilver pozwala na wyeliminowanie niebezpiecznych dla zdrowia środków chemicznych stosowanych w gospodarstwach domowych. </p>
             </div>
         </div>
     </div>
