--- a/src/components/widgets/rocksoft/Hero.astro
+++ b/src/components/widgets/rocksoft/Hero.astro
@@ -19,11 +19,11 @@ const {
 ---
 
 
-<section class="md:h-[684px] flex items-center p-5">
+<section class="md:h-[100vh] flex items-center p-5 dark:bg-rs-dark-blue">
   <div class="max-w-screen-lg mx-auto">
     <div class="grid md:grid-cols-hero-grid gap-x-8">
       <div>
-        <h1 class="font-bold text-4xl md:text-7xl text-black text-center md:text-left">
+        <h1 class="font-bold text-3xl md:text-7xl text-black text-center md:text-left dark:text-white">
           Rewolucja wśród<br />
           środków czystości
         </h1>
@@ -32,14 +32,14 @@ const {
         </div>
         
         <div class="flex gap-6 mt-7 md:flex-row flex-col items-center md:items-start">
-          <Button variant="green" class={`md:px-3 px-3`} href="test">
+          <Button variant="green" free="true" class={`md:px-3 px-3`} href="test">
             Umów prezentację
           </Button>
-          <Button variant="transparent" class={`md:px-3 px-3`} href="test">
+          <Button variant="transparent" free="false" class={`md:px-3 px-3`} href="test">
             Oblicz oszczędności
           </Button>
         </div>
-        <p class="text-base md:text-xl font-normal text-black mt-7 text-center md:text-left">Przewiń dalej, aby dowiedzieć się więcej</p>
+        <p class="text-base md:text-xl font-normal text-black mt-7 text-center md:text-left dark:text-white">Przewiń dalej, aby dowiedzieć się więcej</p>
         <a href="" class="w-16 h-16 flex items-center justify-center rounded-full bg-rs-light-green mt-6 mx-auto md:mx-0">
           <svg width="30" height="18" viewBox="0 0 30 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M2.53479 2.76738L15 15.2326L27.4653 2.76738" stroke="#00984D" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
