--- a/src/components/widgets/rocksoft/partials/Calculator.astro
+++ b/src/components/widgets/rocksoft/partials/Calculator.astro
@@ -4,9 +4,7 @@ import Image from '~/components/common/Image.astro';
 
 ---
 
-
-
-<div class="bg-white p-6 rounded-lg max-w-3xl mx-auto flex flex-col gap-7">
+<div class="bg-white p-6 rounded-lg max-w-3xl mx-auto flex flex-col gap-7 dark:bg-rs-dark-blue-3">
 
     <div class="calculator-item flex flex-col gap-3">
         <div class="calculator-header">
@@ -15,7 +13,7 @@ import Image from '~/components/common/Image.astro';
         <div>
             <div class="grid grid-cols-2 gap-3">
                 <div class="calculator-select-item cursor-pointer bg-rs-light-gray rounded-lg p-4 box-border" data-option-id="1" onclick="window.calcForm.selectOption(this)" >
-                    <div class="grid grid-cols-2 gap-2">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
                         <div>
                             <Image
                                 src="/img/calculator-option-1.png"
@@ -27,12 +25,12 @@ import Image from '~/components/common/Image.astro';
                             />
                         </div>
                         <div class="flex items-center">
-                            <span class="text-xl font-light text-black">MINI SET zestaw domowy</span>
+                            <span class="text-xl font-light text-black text-center md:text-left">MINI SET zestaw domowy</span>
                         </div>
                     </div>
                 </div>
                 <div class="calculator-select-item cursor-pointer bg-rs-light-gray rounded-lg p-4 box-border" data-option-id="2" onclick="window.calcForm.selectOption(this)">
-                    <div class="grid grid-cols-2 gap-2">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
                         <div>
                             <Image
                                 src="/img/calculator-option-1.png"
@@ -44,7 +42,7 @@ import Image from '~/components/common/Image.astro';
                             />
                         </div>
                         <div class="flex items-center">
-                            <span class="text-xl font-light text-black">MINI SET zestaw domowy</span>
+                            <span class="text-xl font-light text-black text-center md:text-left">MINI SET zestaw domowy</span>
                         </div>
                     </div>
                 </div>
@@ -59,13 +57,13 @@ import Image from '~/components/common/Image.astro';
         <div>
             <div class="grid-cols-calc-input-grid grid gap-1">
                 <div>
-                    <input type="number" id="windowCount" class="calculator-input w-full bg-rs-light-gray rounded-full h-12 px-4 text-black" value="0" min="0" data-name="windowCount" onkeyup="window.calcForm.keyUpInput(this)" />
+                    <input type="number" id="windowCount" class="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none calculator-input w-full bg-rs-light-gray rounded-full h-12 px-4 text-black" value="0" min="0" data-name="windowCount" onkeyup="window.calcForm.keyUpInput(this)" />
                 </div>
                 <div>
-                    <button class="h-12 w-12 flex items-center justify-center bg-rs-red rounded-full text-2xl font-bold" onclick="window.calcForm.decreaseValueButtonHandle(this)">-</button>
+                    <button class="h-12 w-12 flex items-center justify-center bg-rs-red rounded-full text-2xl font-bold text-white dark:text-black" onclick="window.calcForm.decreaseValueButtonHandle(this)">-</button>
                 </div>
                 <div>
-                    <button class="h-12 w-12 flex items-center justify-center bg-rs-green rounded-full text-2xl font-bold" onclick="window.calcForm.increaseValueButtonHandle(this)">+</button>
+                    <button class="h-12 w-12 flex items-center justify-center bg-rs-green rounded-full text-2xl font-bold text-white dark:text-black" onclick="window.calcForm.increaseValueButtonHandle(this)">+</button>
                 </div>
             </div>
         </div>
@@ -78,13 +76,13 @@ import Image from '~/components/common/Image.astro';
         <div>
             <div class="grid-cols-calc-input-grid grid gap-1">
                 <div>
-                    <input id="bathroomCount" type="number" class="calculator-input w-full bg-rs-light-gray rounded-full h-12 px-4 text-black" value="0"  min="0" data-name="bathroomCount" onkeyup="window.calcForm.keyUpInput(this)" />
+                    <input id="bathroomCount" type="number" class="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none calculator-input w-full bg-rs-light-gray rounded-full h-12 px-4 text-black" value="0"  min="0" data-name="bathroomCount" onkeyup="window.calcForm.keyUpInput(this)" />
                 </div>
                 <div>
-                    <button class="h-12 w-12 flex items-center justify-center bg-rs-red rounded-full text-2xl font-bold" onclick="window.calcForm.decreaseValueButtonHandle(this)">-</button>
+                    <button class="h-12 w-12 flex items-center justify-center bg-rs-red rounded-full text-2xl font-bold text-white dark:text-black" onclick="window.calcForm.decreaseValueButtonHandle(this)">-</button>
                 </div>
                 <div>
-                    <button class="h-12 w-12 flex items-center justify-center bg-rs-green rounded-full text-2xl font-bold" onclick="window.calcForm.increaseValueButtonHandle(this)">+</button>
+                    <button class="h-12 w-12 flex items-center justify-center bg-rs-green rounded-full text-2xl font-bold text-white dark:text-black" onclick="window.calcForm.increaseValueButtonHandle(this)">+</button>
                 </div>
             </div>
         </div>
@@ -97,13 +95,13 @@ import Image from '~/components/common/Image.astro';
         <div>
             <div class="grid-cols-calc-input-grid grid gap-1">
                 <div>
-                    <input id="houseArea" type="number" class="calculator-input w-full bg-rs-light-gray rounded-full h-12 px-4 text-black" value="0" min="0" data-name="houseArea" onkeyup="window.calcForm.keyUpInput(this)" />
+                    <input id="houseArea" type="number" class="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none calculator-input w-full bg-rs-light-gray rounded-full h-12 px-4 text-black" value="0" min="0" data-name="houseArea" onkeyup="window.calcForm.keyUpInput(this)" />
                 </div>
                 <div>
-                    <button class="h-12 w-12 flex items-center justify-center bg-rs-red rounded-full text-2xl font-bold" onclick="window.calcForm.decreaseValueButtonHandle(this)">-</button>
+                    <button class="h-12 w-12 flex items-center justify-center bg-rs-red rounded-full text-2xl font-bold text-white dark:text-black" onclick="window.calcForm.decreaseValueButtonHandle(this)">-</button>
                 </div>
                 <div>
-                    <button class="h-12 w-12 flex items-center justify-center bg-rs-green rounded-full text-2xl font-bold" onclick="window.calcForm.increaseValueButtonHandle(this)">+</button>
+                    <button class="h-12 w-12 flex items-center justify-center bg-rs-green rounded-full text-2xl font-bold text-white dark:text-black" onclick="window.calcForm.increaseValueButtonHandle(this)">+</button>
                 </div>
             </div>
         </div>
@@ -126,14 +124,6 @@ import Image from '~/components/common/Image.astro';
         </div>
         <p class="font-regular text-base text-black">A produkty Raypath mogą Ci służyć nawet <strong>10-15 lat</strong> i <strong>nie zawierają chemii!</strong></p>
     </div>
-</div>
-
-
-
-
-
-<div class="bg-rs-light-gray border-green-700 border-4 bg-rs-light-green">
-
 </div>
 
 
@@ -262,7 +252,7 @@ import Image from '~/components/common/Image.astro';
             if (checkInputs && checkSelect) {
                 return true;
             } else {
-                alert("Wprowadź poprawne wartości!");
+                alert("Wybierz zestaw i wprowadź poprawne wartości!");
                 return false;
             }
         },
