--- a/src/components/widgets/rocksoft/Footer.astro
+++ b/src/components/widgets/rocksoft/Footer.astro
@@ -3,9 +3,9 @@ import Logo from "~/components/Logo.astro";
 import Button from "~/components/ui/Button.astro";
 ---
 
-<footer>
+<footer class="dark:bg-rs-dark-blue">
 
-    <div class="bg-white rounded-lg max-w-screen-lg mx-auto flex flex-col gap-7 py-12 px-4">
+    <div class="bg-white rounded-lg max-w-screen-lg mx-auto flex flex-col gap-7 py-12 px-4 dark:bg-rs-dark-blue">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-footer-grid gap-y-10">
             <div class="md:order-1 lg:order-1">
                 <Logo />
