--- a/src/components/widgets/rocksoft/Testimonials.astro
+++ b/src/components/widgets/rocksoft/Testimonials.astro
@@ -2,9 +2,9 @@
 import TestimonialsSplide from "./partials/TestimonialsSplide.astro";
 ---
 
-<section class="flex items-center py-20 px-4">
+<section class="flex items-center py-20 px-4 dark:bg-rs-dark-blue-2">
     <div class="max-w-screen-lg w-full mx-auto">
-        <h2 class="font-bold md:text-5xl text-2xl text-black text-center">Co nasi klienci sądzą o Raypath</h2>
+        <h2 class="font-bold md:text-5xl text-2xl text-black text-center mb-10 dark:text-white">Co nasi klienci sądzą o Raypath</h2>
         <TestimonialsSplide />
     </div>
 </section>
