--- a/src/components/blog/GridItem.astro
+++ b/src/components/blog/GridItem.astro
@@ -17,7 +17,7 @@ const image = await findImage(post.image);
 const link = APP_BLOG?.post?.isEnabled ? getPermalink(post.permalink, 'post') : '';
 ---
 
-<article class="mb-6 transition rounded-t-[30px] overflow-hidden bg-white">
+<article class="mb-6 transition rounded-t-[30px] rounded-br-[30px] overflow-hidden bg-white dark:bg-[#0a0f39]">
   <div class="relative md:h-38 bg-gray-400 dark:bg-slate-700 mb-6">
     {
       image &&
@@ -56,7 +56,7 @@ const link = APP_BLOG?.post?.isEnabled ? getPermalink(post.permalink, 'post') : 
   <h3 class="text-black text-base font-bold leading-tight mb-2 font-heading dark:text-slate-300">
     {
       link ? (
-        <a class="inline-block hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200 text-black px-5" href={link}>
+        <a class="inline-block hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200 text-black dark:text-white px-5" href={link}>
           {post.title}
         </a>
       ) : (
