--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -29,7 +29,7 @@ const variants = {
     >
       {
         free == "true" && (
-          <span class="bg-black rounded text-white text-xs font-medium py-1 px-1 top-[-10px] right-0 absolute">ZA DARMO</span>
+          <span class="bg-black rounded text-white text-xs font-medium py-1 px-1 top-[-10px] right-0 absolute dark:bg-white dark:text-black">ZA DARMO</span>
         )
       }
       
