--- a/src/components/widgets/rocksoft/Contact.astro
+++ b/src/components/widgets/rocksoft/Contact.astro
@@ -1,9 +1,9 @@
-<section class="flex items-center py-[90px] px-4">
-    <div class="max-w-screen-lg mx-auto">
-        <h2 class="font-bold md:text-5xl text-2xl text-black text-center mb-10">Chcesz wiedzieć więcej?</h2>
+<section class="flex items-center py-[90px] px-4 dark:bg-rs-dark-blue">
+    <div class="max-w-screen-lg mx-auto ">
+        <h2 class="font-bold md:text-5xl text-2xl text-black text-center mb-10 dark:text-white">Chcesz wiedzieć więcej?</h2>
         <div class="grid md:grid-cols-2 grid-cols-1 gap-x-3 gap-y-10">
             <div>
-                <p class="font-bold text-base text-black text-center mb-10">Pogadajmy na Instagramie</p>
+                <p class="font-bold text-base text-black text-center mb-10 dark:text-white">Pogadajmy na Instagramie</p>
                 <a href="" class="mx-auto bg-rs-green font-bold text-white text-xl rounded-full py-3 px-7 block w-max flex items-center justify-center gap-2">
                     <span>Napisz</span>
                     <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -14,8 +14,8 @@
                 </a>
             </div>
             <div>
-                <p class="font-bold text-base text-black text-center mb-10">Lub zadzwoń na numer:</p>
-                <a href=""  class="font-light text-2xl text-black text-center mx-auto flex items-center justify-center h-14">533 344 110</a>
+                <p class="font-bold text-base text-black text-center mb-10 dark:text-white">Lub zadzwoń na numer:</p>
+                <a href=""  class="font-light text-2xl text-black text-center mx-auto flex items-center justify-center h-14 dark:text-white">533 344 110</a>
             </div>
         </div>
     </div>
