--- a/src/components/widgets/rocksoft/partials/TestimonialsSplide.astro
+++ b/src/components/widgets/rocksoft/partials/TestimonialsSplide.astro
@@ -71,9 +71,14 @@ const slides = [
       </section>
 </div>
 
-<script>
-    new Splide( '.splide' ).mount();
-</script>
+
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", (event) => {
+        new Splide( '.splide' ).mount();
+    });
+      
+</script>
 
 
