--- a/src/components/widgets/rocksoft/About.astro
+++ b/src/components/widgets/rocksoft/About.astro
@@ -3,7 +3,7 @@ import Image from '~/components/common/Image.astro';
 ---
 
 
-<section class="flex items-center py-[90px] bg-rs-light-green px-4 dark:bg-rs-dark-blue">
+<section class="flex items-center py-[90px] bg-rs-light-green px-4 dark:bg-rs-dark-blue" id="about">
     <div class="max-w-screen-lg mx-auto">
         
         <div class="grid gap-x-2 gap-y-12 grid-cols-1 md:grid-cols-about-grid">
