--- a/src/components/widgets/rocksoft/Calculator.astro
+++ b/src/components/widgets/rocksoft/Calculator.astro
@@ -6,7 +6,7 @@ import Calculator from '~/components/widgets/rocksoft/partials/Calculator.astro'
 ---
 
 
-<section class="flex items-center py-[100px] bg-rs-light-green dark:bg-rs-dark-blue-2 px-4">
+<section class="flex items-center py-[100px] bg-rs-light-green dark:bg-rs-dark-blue-2 px-4" id="calc">
     <div class="max-w-screen-lg mx-auto">
         <h2 class="font-bold md:text-5xl text-2xl text-black text-center mb-10 dark:text-white">Kalkulator oszczędności</h2>
 
