--- a/src/components/widgets/rocksoft/partials/TestimonialsSplide.astro
+++ b/src/components/widgets/rocksoft/partials/TestimonialsSplide.astro
@@ -28,7 +28,7 @@ const slides = [
 
 
 <div>
-    <section class="splide" aria-label="Splide Basic HTML Example">
+    <section class="splide" aria-label="Testimonials">
         <div class="splide__track">
               <ul class="splide__list">
                 {slides.map((slide) => 
@@ -71,14 +71,5 @@ const slides = [
       </section>
 </div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-
-<script>
-    document.addEventListener("DOMContentLoaded", (event) => {
-        new Splide( '.splide' ).mount();
-    });
-      
-</script>
 
 
