--- a/src/components/ui/WidgetWrapper.astro
+++ b/src/components/ui/WidgetWrapper.astro
@@ -15,17 +15,20 @@ const WrapperTag = as;
 ---
 
 <WrapperTag class="relative not-prose scroll-mt-[72px]" {...id ? { id } : {}}>
-  <div class="absolute inset-0 pointer-events-none -z-[1]" aria-hidden="true">
-    <slot name="bg">
-      {bg ? <Fragment set:html={bg} /> : <Background isDark={isDark} />}
-    </slot>
+  <div class="mx-auto px-6 sm:px-6 max-w-3xl">
+    <div class="absolute inset-0 pointer-events-none -z-[1]" aria-hidden="true">
+      <slot name="bg">
+        {bg ? <Fragment set:html={bg} /> : <Background isDark={isDark} />}
+      </slot>
+    </div>
+    <div
+      class:list={[
+        twMerge('relative text-default', containerClass),
+        { dark: isDark },
+      ]}
+    >
+      <slot />
+    </div>
   </div>
-  <div
-    class:list={[
-      twMerge('relative text-default', containerClass),
-      { dark: isDark },
-    ]}
-  >
-    <slot />
-  </div>
+
 </WrapperTag>
