--- a/src/components/widgets/rocksoft/Footer.astro
+++ b/src/components/widgets/rocksoft/Footer.astro
@@ -12,20 +12,20 @@ import Button from "~/components/ui/Button.astro";
             </div>
             <div class="md:order-3 lg:order-2">
                 <ul class="leading-9">
-                    <li><a href="" class="text-xl">O Raypath</a></li>
-                    <li><a href="" class="text-xl">Kluczowe zalety</a></li>
-                    <li><a href="" class="text-xl">Kalkulator oszczędności</a></li>
+                    <li><a href="/#about" class="text-xl">O Raypath</a></li>
+                    <li><a href="/#advantages" class="text-xl">Kluczowe zalety</a></li>
+                    <li><a href="/#calc" class="text-xl">Kalkulator oszczędności</a></li>
                 </ul>
             </div>
             <div class="md:order-4 lg:order-3">
                 <ul class="leading-9">
-                    <li><a href="" class="text-xl">Opinie</a></li>
-                    <li><a href="" class="text-xl">Blog</a></li>
-                    <li><a href="" class="text-xl">Kontakt</a></li>
+                    <!-- <li><a href="/#testimonials" class="text-xl">Opinie</a></li> -->
+                    <li><a href="/blog" class="text-xl">Blog</a></li>
+                    <li><a href="/#about" class="text-xl">Kontakt</a></li>
                 </ul>
             </div>
             <div class="md:order-2 lg:order-4">
-                <Button variant="transparent" free="false" class={`md:px-3 px-3`} href="test">
+                <Button variant="transparent" free="false" class={`md:px-3 px-3`} href="/#calc">
                     Oblicz oszczędności
                 </Button>
             </div>
