--- a/src/components/widgets/rocksoft/partials/Calculator.astro
+++ b/src/components/widgets/rocksoft/partials/Calculator.astro
@@ -8,7 +8,7 @@ import Image from '~/components/common/Image.astro';
 
     <div class="calculator-item flex flex-col gap-3">
         <div class="calculator-header">
-            <h3 class="text-base font-bold text-black">Wybierz zestaw</h3>
+            <h3 class="text-base font-bold text-black dark:text-white">Wybierz zestaw</h3>
         </div>
         <div>
             <div class="grid grid-cols-2 gap-3">
