--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,8 +29,7 @@ const metadata = {
   <Hero />
   <Whyus />
   <Calculator />
-  <Testimonials />
-  <!-- HighlightedPosts Widget ******* -->
+  <!-- <Testimonials /> -->
   <BlogLatestPosts title="Odkryj więcej treści na naszym blogu" />
   <Contact />
   <About />
