--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -98,29 +98,28 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
       
 
         <li><a
-        onclick="setIntervalSlider()"
           class='hover:text-link dark:hover:text-white px-4 py-3 flex items-center text-black dark:text-white text-xl'
           href="/#advantages">Zalety
         </a></li>
         <li><a
-        onclick="setIntervalSlider()"
           class='hover:text-link dark:hover:text-white px-4 py-3 flex items-center text-black dark:text-white text-xl'
           href="/#calc">Kalkulator
         </a></li>
-        <!-- <li><a
-        onclick="setIntervalSlider()"
+        <li><a
           class='hover:text-link dark:hover:text-white px-4 py-3 flex items-center text-black dark:text-white text-xl'
           href="/#testimonials">Opinie
-        </a></li> -->
+        </a></li>
         <li><a
-        onclick="setIntervalSlider()"
           class='hover:text-link dark:hover:text-white px-4 py-3 flex items-center text-black dark:text-white text-xl'
           href="/blog">Blog
         </a></li>
         <li><a
-        onclick="setIntervalSlider()"
+            class='hover:text-link dark:hover:text-white px-4 py-3 flex items-center text-black dark:text-white text-xl'
+            href="/#about">O&nbsp;Raypath
+        </a></li>
+        <li><a
           class='hover:text-link dark:hover:text-white px-4 py-3 flex items-center text-black dark:text-white text-xl'
-          href="/#about">O&nbsp;Raypath
+          href="/#contact">Kontakt
         </a></li>
           
 
