--- a/src/components/widgets/rocksoft/Contact.astro
+++ b/src/components/widgets/rocksoft/Contact.astro
@@ -1,4 +1,4 @@
-<section class="flex items-center py-[90px] px-4 dark:bg-rs-dark-blue">
+<section id="contact" class="flex items-center py-[90px] px-4 dark:bg-rs-dark-blue">
     <div class="max-w-screen-lg mx-auto ">
         <h2 class="font-bold md:text-5xl text-2xl text-black text-center mb-10 dark:text-white">Chcesz wiedzieć więcej?</h2>
         <div class="grid md:grid-cols-2 grid-cols-1 gap-x-3 gap-y-10">
@@ -15,7 +15,7 @@
             </div>
             <div>
                 <p class="font-bold text-base text-black text-center mb-10 dark:text-white">Lub zadzwoń na numer:</p>
-                <a href=""  class="font-light text-2xl text-black text-center mx-auto flex items-center justify-center h-14 dark:text-white">533 344 110</a>
+                <a href="tel:+48533344110"  class="font-light text-2xl text-black text-center mx-auto flex items-center justify-center h-14 dark:text-white">533 344 110</a>
             </div>
         </div>
     </div>
