--- a/src/components/widgets/rocksoft/Footer.astro
+++ b/src/components/widgets/rocksoft/Footer.astro
@@ -19,9 +19,9 @@ import Button from "~/components/ui/Button.astro";
             </div>
             <div class="md:order-4 lg:order-3">
                 <ul class="leading-9">
-                    <!-- <li><a href="/#testimonials" class="text-xl">Opinie</a></li> -->
+                    <li><a href="/#testimonials" class="text-xl">Opinie</a></li>
                     <li><a href="/blog" class="text-xl">Blog</a></li>
-                    <li><a href="/#about" class="text-xl">Kontakt</a></li>
+                    <li><a href="/#contact" class="text-xl">Kontakt</a></li>
                 </ul>
             </div>
             <div class="md:order-2 lg:order-4">
