--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const metadata = {
   <Hero />
   <Whyus />
   <Calculator />
-  <!-- <Testimonials /> -->
+  <Testimonials />
   <BlogLatestPosts title="Odkryj więcej treści na naszym blogu" />
   <Contact />
   <About />
