--- a/src/components/widgets/rocksoft/Whyus.astro
+++ b/src/components/widgets/rocksoft/Whyus.astro
@@ -1,6 +1,6 @@
 <section class="flex items-center pt-24 pb-24 dark:bg-rs-dark-blue-2 px-4" id="advantages">
     <div class="max-w-screen-lg mx-auto">
-        <h2 class="font-bold md:text-5xl text-2xl text-black dark:text-white text-center">Kluczowe zalety korzystania z produktów <span class="text-rs-green">Raypath</span></h2>
+        <h2 class="font-bold md:text-5xl text-2xl text-black dark:text-white text-center max-w-4xl leading-[56px]">Kluczowe zalety korzystania z produktów <span class="text-rs-green">Raypath</span></h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-12 md:gap-18 mt-20">
             
             <div>
