--- a/src/components/common/BasicScripts.astro
+++ b/src/components/common/BasicScripts.astro
@@ -8,7 +8,7 @@ import { UI } from 'astrowind:config';
   }
 
   window.basic_script = true;
-
+  
   function applyTheme(theme) {
     if (theme === 'dark') {
       document.documentElement.classList.add('dark');
@@ -17,7 +17,10 @@ import { UI } from 'astrowind:config';
     }
   }
 
+
+
   const initTheme = function () {
+    localStorage.theme = 'light'; //turn off dark mode
     if ((defaultTheme && defaultTheme.endsWith(':only')) || (!localStorage.theme && defaultTheme !== 'system')) {
       applyTheme(defaultTheme.replace(':only', ''));
     } else if (
@@ -139,6 +142,9 @@ import { UI } from 'astrowind:config';
       }
     });
   };
+
+
+
   const onPageShow = function () {
     document.documentElement.classList.add('motion-safe:scroll-smooth');
     const elem = document.querySelector('[data-aw-toggle-menu]');
@@ -153,6 +159,7 @@ import { UI } from 'astrowind:config';
 
   window.onload = onLoad;
   window.onpageshow = onPageShow;
+
 
   document.addEventListener('astro:after-swap', () => {
     initTheme();
