Change heros height

--- a/src/components/widgets/rocksoft/Hero.astro
+++ b/src/components/widgets/rocksoft/Hero.astro
@@ -19,7 +19,7 @@ const {
 ---
 
 
-<section class="md:h-[100vh] flex items-center p-5 dark:bg-rs-dark-blue">
+<section class="py-[50px] md:py-[100px] flex items-center p-5 dark:bg-rs-dark-blue">
   <div class="max-w-screen-lg mx-auto">
     <div class="grid md:grid-cols-hero-grid gap-x-8">
       <div>
